--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ anyio==4.9.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
+colorama==0.4.6
+cryptography==45.0.5
 dnspython==2.7.0
+faiss-cpu==1.11.0.post1
 fastapi==0.116.1
 filelock==3.18.0
 fsspec==2025.5.1
+greenlet==3.2.3
 h11==0.16.0
 hf-xet==1.1.5
 huggingface-hub==0.33.4
@@ -23,6 +27,7 @@ pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pymongo==4.13.2
+PyMySQL==1.1.1
 python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2024.11.6
@@ -30,6 +35,7 @@ requests==2.32.4
 safetensors==0.5.3
 sentencepiece==0.2.0
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.47.1
 sympy==1.14.0
 tokenizers==0.21.2
